frontend/public/index.css
/* ... */
.Login {
	text-align: center;
}

.Login-logo {
	height: 10vmin;
	margin: 10px
}

@media (prefers-reduced-motion: no-preference) {
	.Login-logo {
		animation: Login-logo-spin infinite 20s linear;
	}
}

.Login-header {
	background-color: #000000;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	font-size: calc(10px + 2vmin);
	color: rgb(255, 210, 7);
}

.Login-link {
	color: #ff643d;
}

@keyframes Login-logo-spin {
	from {
		transform: rotate(0deg);
	}

	to {
		transform: rotate(360deg);
	}
}

/*_______________________________________________________________________________________*/
/*                              friend component style                                   */
/*_______________________________________________________________________________________*/

.friends {
	color: black;
	border-bottom: 4px;
	border: 1px solid rgb(66, 70, 79);
	background-color: #080d17;
	border-radius: 0;
	height: calc(100% - 1px);
	overflow-y: scroll;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	width: 15%;
}

.typo-friends {
	width: 100%;
	text-align: center;
	font-size: 1.5em;
	margin: 10px 0;
}

.list {
	padding: 15px;
}

/*_______________________________________________________________________________________*/
/*                              button component style                                   */
/*_______________________________________________________________________________________*/

.launch-button {
	padding: 15px 45px;
	font-size: large;
}

.launch-game {
	background-size: cover;
	display: flex;
	align-items: center;
	justify-content: center;
	/* flex-grow: 1; */
	position: absolute;
	right: 0;
	top: 0;
	bottom: 0;
	width: calc(85% - 2px);
}

.btn-game {
	display: flex;
	flex-direction: row;
	justify-content: center;
}

.disabled-button {
	background: #606060;
	font-weight: bold;
	font-family: Azonix;
	color: #b0b0b0;
	border: 1px solid #808080;
	display: flex;
	align-content: center;
	align-items: center;
	width: auto;
	cursor: not-allowed;
}


/*_______________________________________________________________________________________*/
/*                              profil button component                                  */
/*_______________________________________________________________________________________*/

.profil-button {
	background: #080d17;
	font-weight: bold;
	font-family: Azonix;
	color: #ffc107;
	border: black;
	display: flex;
	align-content: center;
	align-items: center;
	width: auto;
	cursor: auto;
	cursor: pointer;
}

.profil-button:hover,
.profil-button:focus {
	background-color: #454b4f;
}

.css-3dzjca-MuiPaper-root-MuiPopover-paper-MuiMenu-paper {
	color: #fec400 !important;
	background-color: rgb(8, 13, 23) !important;
}


/*_______________________________________________________________________________________*/
/*                                    channel side bar component                         */
/*_______________________________________________________________________________________*/

.channels {
	color: black;
	border-bottom: 4px;
	border: 1px solid rgb(66, 70, 79);
	background-color: #080d17;
	border-radius: 0;
	height: calc(100% - 1px);
	/* overflow-y: scroll; */
	position: absolute;
	top: 0;
	left: 15%;
	bottom: 0;
	width: 20%;
}

.css-78trlr-MuiButtonBase-root-MuiIconButton-root {
	color: rgb(236, 155, 33) !important;
	padding: 0px 10px !important;
}

.typo-channel {
	width: 100%;
	/* text-align: center; */
	font-size: 1.5em;
	margin: 10px 10px;
}

.typo {
	width: 100%;
	font-size: 0.5em;
	text-align: center;
	margin: 20 0;
}

/*_______________________________________________________________________________________*/
/*                                    window chat component                              */
/*_______________________________________________________________________________________*/

.chat-content {
	position: absolute;
	display: flex;
	flex-direction: column;
	min-width: 0;
	min-height: 0;
	background-color: #080d17;
	display: flex;
	align-items: center;
	justify-content: center;
	right: 0;
	top: 0;
	bottom: 0;
	width: calc(65% - 2px);
	padding-bottom: 10px;
}

.chat-header {
	position: absolute;
	width: 100%;
	top: 0px;
	right: 0px;
	left: 0px;
	border-bottom: 3px solid #31343b;
	padding: 15px;
	color: #fec400;
	font-size: 20px;
	font-weight: bold;
	text-align: center;
}

#input-area {
	position: absolute;
	display: flex;
	flex-direction: row;
	justify-content: center;
	width: 100%;
	height: 50px;
	bottom: 6px;
}

textarea {
	width: 88%;
	margin-right: 6px;
	border: none;
	background-color: #31343b;
	color: #ebebeb;
}

.send-button {
	width: 10%;
	padding: 18px 10px;
	text-align: center;
	font-size: small;
}


/* message styles____________________________________________________________ */

.messages-area {
	position: absolute;
	width: 100%;
	top: 55px;
	right: 0px;
	left: 0px;
	bottom: 60px;
	padding: 15px;
	overflow-y: auto;
	scrollbar-width: none;
	white-space: break-spaces;
	/* background-color: #ebebeb; */
}

.my-message{
	max-width: 75%;
	margin-left: 20%;
	margin-right: 3%;
	width: fit-content;
	padding: 10px;
	border-radius: 25px;
	background-color: #d3a313;
	margin-bottom: 3px;
	overflow-wrap: break-word;
	float: right;
	clear: both;
}

.other-message{
	max-width: 75%;
	margin-right: 20%;
	width: fit-content;
	padding: 10px;
	border-radius: 25px;
	background-color: #e7e333;
	margin-bottom: 3px;
	overflow-wrap: break-word;
	float: left;
	clear: both;
}

.typo-message {
	font-size: medium;
	color: #080d17;
	font-family: "Andika";
	/* font-weight: bold; */
}


.chat-btn-pos {
	text-align: center;
	padding: 5px;
	margin: 0;
	padding-left: 150px;
}
/* ... */

